[package]
name = "antilysis"
version = "0.1.2"
edition = "2021"
description = "Anti-analysis and anti-vm for windows"
license = "MIT"
homepage = "https://github.com/percept-denigrate/antilysis"
repository = "https://github.com/percept-denigrate/antilysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
rdev = "0.5.3"
winapi = "0.3.9"
