[package]
name = "antilysis"
version = "0.2.1"
edition = "2021"
description = "State-of-the-art dynamic analysis countering techniques on Windows"
license = "MIT"
homepage = "https://github.com/percept-denigrate/antilysis"
repository = "https://github.com/percept-denigrate/antilysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.7"
rdev = "0.5.3"
winapi = { version = "0.3", features = ["winbase", "processenv", "debugapi", "iphlpapi", "iptypes"] }
ntapi = "0.4.1"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]